--- a/package.json
+++ b/package.json
@@ -15,6 +15,10 @@
   "dependencies": {
     "@dnd-kit/core": "^6.3.1",
     "@dnd-kit/sortable": "^10.0.0",
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.1",
+    "@mui/material": "^7.3.6",
+    "@mui/x-data-grid": "^8.23.0",
     "@tippyjs/react": "^4.2.6",
     "imagetracerjs": "^1.2.6",
     "mobx": "^6.15.0",
