--- a/package.json
+++ b/package.json
@@ -28,17 +28,21 @@
     "tippy.js": "^6.3.7"
   },
   "pnpm": {
-    "onlyBuiltDependencies": ["esbuild"]
+    "onlyBuiltDependencies": [
+      "esbuild"
+    ]
   },
   "devDependencies": {
     "@eslint/js": "^9.39.1",
     "@types/node": "^24.10.1",
     "@types/react": "^19.2.5",
     "@types/react-dom": "^19.2.3",
+    "@typescript-eslint/parser": "^8.50.1",
     "@vitejs/plugin-react": "^5.1.1",
     "@vitest/ui": "^4.0.15",
     "eslint": "^9.39.1",
     "eslint-plugin-functional": "^9.0.2",
+    "eslint-plugin-mobx": "^0.0.13",
     "eslint-plugin-react-hooks": "^7.0.1",
     "eslint-plugin-react-refresh": "^0.4.24",
     "globals": "^16.5.0",
