feat(export): Add video export with WebCodecs (Sprint 4, Deliverables 4.1-4.2)
Implements video export infrastructure using WebCodecs API and Mediabunny muxer.

Changes:
- Add VideoExporter class with H.264 and VP9 codec support
- Add codec utilities for browser support detection and config
- Add VideoMuxer wrapper for Mediabunny library (MP4/WebM containers)
- Install mediabunny package for video muxing
- Extend export types with VideoCodec, VideoFormat, VideoExportConfig

Features:
- H.264 codec (baseline profile) for MP4 output
- VP9 codec for WebM output
- Configurable bitrate with recommended defaults (5 Mbps @ 1080p)
- Browser support detection with clear error messages
- Progress callbacks during encoding
- Cancellation support
- Proper resource cleanup

Technical details:
- Uses OffscreenCanvas for frame rendering
- VideoEncoder API for encoding frames to chunks
- Mediabunny Output + EncodedVideoPacketSource for muxing
- Async/await for encoder flush and muxer finalization
- Frame timestamps in microseconds for VideoFrame API
- Duration calculation from FPS when not provided by encoder

Remaining work (Deliverable 4.3):
- Update ExportDialog UI with video export option
- Add codec selector and bitrate controls
- Integration tests

--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@mui/x-data-grid": "^8.23.0",
     "@tippyjs/react": "^4.2.6",
     "imagetracerjs": "^1.2.6",
+    "mediabunny": "^1.27.2",
     "mobx": "^6.15.0",
     "mobx-react-lite": "^4.1.1",
     "react": "^19.2.0",
