feat(export): add GIF export with palette optimization and dithering
Sprint 6: GIF Export - Complete implementation of animated GIF export
functionality with quality controls.

Deliverable 6.1: GIF Library Integration
- Integrated gifenc library for fast GIF encoding
- Created GifExporter class with OffscreenCanvas rendering
- Implemented frame delay configuration (ms per frame, based on fps)
- Added loop configuration (infinite or N iterations)
- Frame encoding runs on main thread (no Worker complexity for now)

Deliverable 6.2: Palette Optimization and Dithering
- Global palette quantization across all frames (16-256 colors)
- RGB565 format for better quality palette generation
- Quality slider controls palette size
- Dithering modes defined (none/floyd-steinberg/ordered)
- Note: gifenc does not support dithering natively yet

Deliverable 6.3: GIF Export UI
- Added Export GIF option to ExportDialog
- Quality slider (16-256 colors, default 128)
- Dithering selector (UI ready, backend limited)
- Loop mode: Infinite or N iterations
- FPS selector (10, 15, 24, 30, 60)
- Progress bar during encoding (two-phase: render + encode)

Technical Implementation:
- Added gifenc TypeScript declarations
- Extended export types with GifExportConfig and DitheringMode
- Proper validation and error handling
- Comprehensive test coverage (23 tests, all passing)
- Frame delay in centiseconds (GIF standard)
- Global palette optimization for better quality

Files Modified:
- src/editor/components/ExportDialog.tsx - Added GIF export UI
- src/editor/export/types.ts - Added GIF types
- package.json - Added gifenc dependency

Files Created:
- src/editor/export/GifExporter.ts - GIF exporter class
- src/editor/export/gifenc.d.ts - Type declarations
- src/editor/export/__tests__/GifExporter.test.ts - Tests

All 2561 tests passing. TypeScript compilation clean.

--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@mui/material": "^7.3.6",
     "@mui/x-data-grid": "^8.23.0",
     "@tippyjs/react": "^4.2.6",
+    "gifenc": "^1.0.3",
     "imagetracerjs": "^1.2.6",
     "mediabunny": "^1.27.2",
     "mobx": "^6.15.0",
