refactor(compiler): delete pass0-materialize, GraphNormalizer is single source
- DELETE: src/editor/compiler/passes/pass0-materialize.ts (195 lines)
- UPDATE: src/editor/compiler/compile.ts
  - Remove pass0Materialize import and call (lines 29, 117-118)
  - Update comment: passes 1-8 instead of 0-8
  - Add comment: patch already normalized by GraphNormalizer
- Compiler now receives pre-normalized patch with structural blocks
- No duplicate provider block creation

P0-1 complete: pass0 deleted, compile.ts updated

--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "@typescript-eslint/parser": "^8.50.1",
     "@vitejs/plugin-react": "^5.1.1",
     "@vitest/ui": "^4.0.15",
+    "chrome-remote-interface": "^0.33.3",
     "eslint": "^9.39.1",
     "eslint-plugin-functional": "^9.0.2",
     "eslint-plugin-mobx": "^0.0.13",
